<resources>
    <string name="app_name">UpSchoolCapstoneProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invalid_mail">Not a valid email address. Should be your@email.com</string>
    <string name="invalid_nickname">Please enter a nickname</string>
    <string name="invalid_phone_number">Please enter a phone number</string>
    <string name="invalid_password">"Invalid Password"</string>
    <string name="invalid_verify_password">"Invalid Verify Password"</string>
    <string name="invalid_cardholder_name">"Please enter cardholder name"</string>
    <string name="invalid_credit_card_number">"Please enter credit card number"</string>
    <string name="invalid_month">"Please select month"</string>
    <string name="invalid_year">"Please select year"</string>
    <string name="invalid_cvc_code">"Please enter CVC code"</string>
    <string name="invalid_address">"Please enter address"</string>
    <string name="invalid_bag_products">"There are no products in the cart"</string>
    <string name="something_went_wrong">"Something went wrong"</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="social_sign_up">Or sign up with social account</string>
    <string name="social_login">Or login with social account</string>
    <string name="forgot_password_text">Please, enter your email address.\nWe will send you link to create a new password.</string>
    <string name="nickname_required">Nickname is required</string>
    <string name="verify_password_required">Verify password is required</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="phone_number_required">Phone number is required</string>
    <string name="fill_all_fields">Fill all fields</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="verify_password">Verify Password</string>
    <string name="nickname">Nickname</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot password</string>
    <string name="send">Send</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="email_sent">Email sent</string>
    <string name="cardholder_name">Cardholder Name</string>
    <string name="credit_card_number">Credit Card Number</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="cvc_code">CVC Code</string>
    <string name="address">Address</string>
    <string name="pay_now">Pay Now</string>
    <string name="buy_now">Buy Now</string>
    <string name="credit_card">Credit Card</string>
    <string name="payment">Payment</string>
    <string name="total_amount">Total Amount:</string>
    <string name="welcome">Welcome</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="category">category</string>
    <string name="product_name">Product Name</string>
    <string name="all_products">All Products</string>
    <string name="sale">Sale</string>
    <string name="error">Error</string>
    <string name="product_added_to_cart">Product added to cart</string>
    <string name="enter_valid_information">Please Enter Valid Information</string>
    <string name="prompt_text">Kategori veya ürün ara</string>
    <string name="network_error">Network Error</string>
    <string name="error_unknown">Unknown Error</string>
    <string name="empty_card">Sepetiniz şu an boş.</string>
    <string name="unexpected_error_message">Beklenmeyen bir hata oluştu.</string>
    <string name="categories">Categories</string>
    <string name="favorites">Favorites</string>
    <string name="productitle">Product Title\n</string>
    <string name="you_don_t_have_a_favorite_product">You don\'t have a favorite product</string>
    <string name="cherry_shopping">CHERRY\nSHOPPING</string>
    <string name="okay">Okay</string>
    <string name="cart">Cart</string>
    <string name="clear">Clear</string>
    <string name="empty_list">Empty list</string>
    <string name="save">Save</string>
    <string name="edit_address">Edit Address</string>
    <string name="password_secret">*******</string>
    <string name="gmail_com">dilarakiraz@gmail.com</string>
    <string name="search">Search</string>
    <string name="cherry">CHERRY</string>
    <string name="producttitle">ProductTitle</string>
    <string name="invalid_input">Invalid input</string>
</resources>