<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_44sdp"
        android:rotationX="180"
        android:src="@drawable/bottom_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="@dimen/_36sdp"
        android:layout_height="@dimen/_36sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:padding="@dimen/_6sdp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:srcCompat="@drawable/ic_back_arrow"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/credit_card"
        android:fontFamily="@font/agbalumo"
        android:textColor="@color/redLight"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_cardholder_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_16sdp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="@dimen/_4sdp"
        app:contentPadding="@dimen/_2sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_cardholder_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/cardholder_name"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:errorTextColor="@color/redDark"
            app:hintTextColor="@color/redDark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_cardholder_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_credit_card_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="@dimen/_4sdp"
        app:contentPadding="@dimen/_2sdp"
        app:layout_constraintEnd_toEndOf="@+id/cv_cardholder_name"
        app:layout_constraintStart_toStartOf="@+id/cv_cardholder_name"
        app:layout_constraintTop_toBottomOf="@+id/cv_cardholder_name">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_credit_card_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/credit_card_number"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:errorTextColor="@color/redDark"
            app:hintTextColor="@color/redDark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_credit_card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789- "
                android:inputType="number"
                android:maxLength="25"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_expire_on_month"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="@dimen/_4sdp"
        app:contentPadding="@dimen/_2sdp"
        app:layout_constraintStart_toStartOf="@+id/cv_cardholder_name"
        app:layout_constraintTop_toBottomOf="@+id/cv_credit_card_number">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_expire_on_month"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/month"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:errorTextColor="@color/redDark"
            app:hintTextColor="@color/redDark">

            <AutoCompleteTextView
                android:id="@+id/act_expire_on_month"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:dropDownHeight="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_expire_on_year"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="@dimen/_4sdp"
        app:contentPadding="@dimen/_2sdp"
        app:layout_constraintBottom_toBottomOf="@+id/cv_expire_on_month"
        app:layout_constraintStart_toEndOf="@id/cv_expire_on_month"
        app:layout_constraintTop_toTopOf="@+id/cv_expire_on_month">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_expire_on_year"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/year"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:errorTextColor="@color/redDark"
            app:hintTextColor="@color/redDark">

            <AutoCompleteTextView
                android:id="@+id/act_expire_on_year"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:dropDownHeight="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_cvc_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="@dimen/_4sdp"
        app:contentPadding="@dimen/_2sdp"
        app:layout_constraintEnd_toEndOf="@+id/cv_expire_on_month"
        app:layout_constraintStart_toStartOf="@+id/cv_cardholder_name"
        app:layout_constraintTop_toBottomOf="@+id/cv_expire_on_month">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_cvc_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/cvc_code"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:errorTextColor="@color/redDark"
            app:hintTextColor="@color/redDark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_cvc_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789- "
                android:inputType="number"
                android:maxLength="3"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/address"
        android:fontFamily="@font/agbalumo"
        android:textColor="@color/redLight"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/cv_cvc_code" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_address"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="@dimen/_4sdp"
        app:contentPadding="@dimen/_2sdp"
        app:layout_constraintBottom_toTopOf="@+id/btn_pay_now"
        app:layout_constraintEnd_toEndOf="@+id/cv_cardholder_name"
        app:layout_constraintStart_toStartOf="@+id/cv_cardholder_name"
        app:layout_constraintTop_toBottomOf="@+id/textView11">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_address"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/address"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:errorTextColor="@color/redDark"
            app:hintTextColor="@color/redDark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_pay_now"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="@color/redLight"
        android:text="@string/pay_now"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:elevation="@dimen/_4sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="loading.json"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment"
        android:textColor="@color/white"
        android:fontFamily="@font/dancingscript"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>